7_services_and_networking/112_defining_network_policy/db-policy-2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy

spec:
  podSelector:
    matchLabels:
      app: db
  
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api-pod
      
    ports:
    - protocol: TCP
      port: 3306

# Send traffic to backup server on port 80
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24

    ports:
    - protocol: TCP
      port: 80
