7_services_and_networking/112_defining_network_policy/db-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy

spec:
  podSelector:
    matchLabels:
      app: db
  
  policyTypes:
  - Ingress
  
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api-pod
      
      # Allow from other namespace. It should have this label first
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prod

    # Allow from certain ip
    - ipBlock:
        cidr: 10.0.0.0/24

    ports:
    - protocol: TCP
      port: 3306
